# CalibrationImageFactoryGUI

./: CMakeLists.txt  CalibrationImageFactoryGUI.pro  README.md  main.cpp  qml.qrc
deploy/: CMakeLists.txt
deploy/win/: CMakeLists.txt  copy_deps.cpp  windows_env.bat
qml/: main.qml
qml/globals/: Globals.qml
qml/widgets/: FLSStitchingViewDelegate.qml  FLSVideoListDelegate.qml  LFSFlatButton.qml  LFSProgressBar.qml  LFSScrollbar.qml  LFSSpinBoxDouble.qml  LFSStartButton.qml  LFSText.qml  LFSTextField.qml  LFSToggleSlider.qml  SwitchSimple.qml  TextFieldDouble.qml  qmldir
src/: ApplicationDefaults.cpp  ApplicationDefaults.h  CalibrationFactory.cpp  CalibrationFactory.h  CalibrationModel.cpp  CalibrationModel.h  CalibrationModelItem.cpp  CalibrationModelItem.h  CalibrationView.cpp  CalibrationView.h  LeiaDisplay.cpp  LeiaDisplay.h  TextFieldDoubleValidator.h  main.cpp
ui/fonts/: fonts.qrc
ui/qml/: main.qml  qml.qrc
ui/qml/globals/: Globals.qml
ui/qml/widgets/: FLSLeftPanelDelegate.qml  LFSBatchPanelFooter.qml  LFSLineDivider.qml  LFSSlider.qml  LFSSpinBoxDouble.qml  LFSStitchingDelegateFooter.qml  LFSToggleSlider.qml  LFSTumbler.qml  LFSUpdaterButton.qml  qmldir
